# wallet

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  alembic.ini  docker-compose.yaml  init-letsencrypt.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py  version.json
app/api/: health.py
app/api/v1/: deps.py
app/api/v1/endpoints/: auth.py  changelog.py  chatbot.py  documents.py  repository.py  transport.py
app/core/: config.py  custom_oauth2.py  deps.py  keycloak.py  security.py
app/data/code_embeddings/: Dockerfile_seg_0.pickle  README.md_seg_0.pickle  alembic.ini_seg_0.pickle  app_api_health.py_seg_0.pickle  app_api_v1_deps.py_seg_0.pickle  app_api_v1_endpoints_auth.py_seg_0.pickle  app_api_v1_endpoints_auth.py_seg_1.pickle  app_api_v1_endpoints_auth.py_seg_2.pickle  app_api_v1_endpoints_auth.py_seg_3.pickle  app_api_v1_endpoints_auth.py_seg_4.pickle  app_api_v1_endpoints_auth.py_seg_5.pickle  app_api_v1_endpoints_changelog.py_seg_0.pickle  app_api_v1_endpoints_changelog.py_seg_1.pickle  app_api_v1_endpoints_changelog.py_seg_2.pickle  app_api_v1_endpoints_chatbot.py_seg_0.pickle  app_api_v1_endpoints_chatbot.py_seg_1.pickle  app_api_v1_endpoints_chatbot.py_seg_2.pickle  app_api_v1_endpoints_documents.py_seg_0.pickle  app_api_v1_endpoints_documents.py_seg_1.pickle  app_api_v1_endpoints_repository.py_seg_0.pickle  app_api_v1_endpoints_repository.py_seg_1.pickle  app_api_v1_endpoints_transport.py_seg_0.pickle  app_api_v1_endpoints_transport.py_seg_1.pickle  app_core_config.py_seg_0.pickle  app_core_deps.py_seg_0.pickle  app_core_keycloak.py_seg_0.pickle  app_core_keycloak.py_seg_1.pickle  app_core_keycloak.py_seg_2.pickle  app_core_security.py_seg_0.pickle  app_core_security.py_seg_1.pickle  app_db_base.py_seg_0.pickle  app_db_base_class.py_seg_0.pickle  app_db_init_db.py_seg_0.pickle  app_db_migrations.py_seg_0.pickle  app_db_models.py_seg_0.pickle  app_db_session.py_seg_0.pickle  app_main.py_seg_0.pickle  app_main.py_seg_1.pickle  app_models_document.py_seg_0.pickle  app_models_recarga.py_seg_0.pickle  (+55 more)
app/db/: base.py  base_class.py  init_db.py  migrations.py  models.py  session.py
app/models/: consumo.py  document.py  recarga.py  transport.py  user.py
app/schemas/: auth.py  chatbot.py  document.py  repository.py  transport.py
app/services/: knowledge_base.py  llm_service.py  repository_knowledge.py
app/tests/: conftest.py  test_auth.py  test_documents.py  test_rate_limit.py  test_transport.py
app/utils/: git_analyzer.py
grafana/provisioning/dashboards/: api-dashboard.json  dashboard.yml  dashboards.yml  wallet_dashboard.json
grafana/provisioning/datasources/: prometheus.yml
nginx/conf/: app.conf
prometheus/: prometheus.yml
templates/: CHANGELOG.md.j2
